--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -931,6 +931,9 @@
   "metamaskDescription": {
     "message": "Connecting you to Ethereum and the Decentralized Web."
   },
+  "metamaskSwapsOfflineDescription": {
+    "message": "MetaMask Swaps is undergoing maintenance. Please check back later."
+  },
   "metamaskVersion": {
     "message": "MetaMask Version"
   },
@@ -1053,6 +1056,9 @@
   },
   "off": {
     "message": "Off"
+  },
+  "offlineForMaintenance": {
+    "message": "Offline for maintenance"
   },
   "ok": {
     "message": "Ok"
