--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1673,7 +1673,7 @@
     "description": "A count of loaded quotes shown to the user while they are waiting for quotes to be fetched. $1 is the number of quotes already loaded, and $2 is the total number of quotes to load."
   },
   "swapQuoteSource": {
-    "message": "Quote Source"
+    "message": "Quote source"
   },
   "swapQuotesAreRefreshed": {
     "message": "Quotes are refreshed often to reflect current market conditions."
