Update intro popover description text (#129)

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1640,7 +1640,7 @@
     "message": "Liquidity sources include:"
   },
   "swapIntroPopupSubTitle": {
-    "message": "Get the best prices on token swaps right inside your wallet—MetaMask automatically compares prices across all available decentralized exchanges."
+    "message": "You can now swap tokens directly in your MetaMask wallet. MetaMask Swaps agglomerates multiple decentralized exchange aggregators, professional market makers, and individual DEXs to ensure MetaMask users always get the best price with the lowest network fees."
   },
   "swapIntroPopupTitle": {
     "message": "Token swapping is here!"
