--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1732,6 +1732,18 @@
   "swapSwapTo": {
     "message": "Swap to"
   },
+  "swapAggregator": {
+    "message": "Aggregator"
+  },
+  "swapRequestForQuotation": {
+    "message": "Request for quotation"
+  },
+  "swapDecentralizedExchange": {
+    "message": "Decentralized exchange"
+  },
+  "swapUnknown": {
+    "message": "Unknown"
+  },
   "swapThisWillAllowApprove": {
     "message": "This will allow $1 to be swapped."
   },
