--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1498,6 +1498,9 @@
   "speedUpTransaction": {
     "message": "Speed up this transaction"
   },
+  "spendingLimitAmount": {
+    "message": "Spend limit amount"
+  },
   "spendLimitInsufficient": {
     "message": "Spend limit insufficient"
   },
