Change locale title to match message

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1498,7 +1498,7 @@
   "speedUpTransaction": {
     "message": "Speed up this transaction"
   },
-  "spendingLimitAmount": {
+  "spendLimitAmount": {
     "message": "Spend limit amount"
   },
   "spendLimitInsufficient": {
