--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1753,6 +1753,9 @@
   "swapSelectAQuote": {
     "message": "Select a quote"
   },
+  "swapSelectAToken": {
+    "message": "Select a token"
+  },
   "swapSelectQuotePopoverDescription": {
     "message": "Below are all the quotes gathered from multiple liquidity sources."
   },
