--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -706,7 +706,8 @@
     "message": "Gas limit is the maximum amount of units of gas you are willing to spend."
   },
   "gasLimitTooLow": {
-    "message": "Gas limit must be at least $1"
+    "message": "Gas limit must be at least $1",
+    "description": "$1 is the custom gas limit, in decimal."
   },
   "gasPrice": {
     "message": "Gas Price (GWEI)"
