fix: update missing zh-cn checksum error trans

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -772,7 +772,7 @@
     "message": "Non-ConfluxNetwork address, please double check"
   },
   "invalidChecksumAddressRecipient": {
-    "message": "Non-ConfluxNetwork address, try setting input to lowercase"
+    "message": "Invalid address"
   },
   "knownAddressRecipient": {
     "message": "Known contract address."
