--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -666,6 +666,15 @@
   "invalidAddressRecipient": {
     "message": "收款地址不合法"
   },
+  "invalid0XAddressRecipient": {
+    "message": "地址不合法, Conflux 网络上的钱包地址以 0x1 和 0x8 开头"
+  },
+  "invalidContractAddressRecipient": {
+    "message": "地址不合法, 请二次确认您输入的地址"
+  },
+  "invalidChecksumAddressRecipient": {
+    "message": "收款地址不合法"
+  },
   "knownAddressRecipient": {
     "message": "已知联系人地址。"
   },
