fix: validate user input hex data
CU-ewny1z

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -703,6 +703,9 @@
   "hexData": {
     "message": "Hex Data"
   },
+  "invalidHexData": {
+    "message": "Invalid Hex Data"
+  },
   "hide": {
     "message": "Hide"
   },
