Update message for case when there are no savings, in new swaps fee card designs

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1848,6 +1848,9 @@
   "swapUnknown": {
     "message": "Unknown"
   },
+  "swapUsingBestQuote": {
+    "message": "Using the best quote"
+  },
   "swapViewToken": {
     "message": "View $1"
   },
