Remove unused getTotalEthCost function

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -132,6 +132,12 @@
   "approvalTxGasCost": {
     "message": "Approval Tx Gas Cost"
   },
+  "approvalAndAggregatorTxFeeCost": {
+    "message": "Approval and aggregator network fee"
+  },
+  "aggregatorFeeCost": {
+    "message": "Aggregator network fee"
+  },
   "approve": {
     "message": "Approve spend limit"
   },
@@ -1685,8 +1691,8 @@
   "swapFinalizing": {
     "message": "Finalizing..."
   },
-  "swapGasFeeSummary": {
-    "message": "The gas fee covers the cost of processing your swap and storing it on the Ethereum network. MetaMask does not profit from this fee."
+  "swapNetworkFeeSummary": {
+    "message": "The network fee covers the cost of processing your swap and storing it on the Ethereum network. MetaMask does not profit from this fee."
   },
   "swapGetQuotes": {
     "message": "Get quotes"
