--- a/app/_locales/zh_TW/messages.json
+++ b/app/_locales/zh_TW/messages.json
@@ -375,7 +375,7 @@
     "message": "確定取消該項目的授權嗎?"
   },
   "disconnectAllAccountsQuestion": {
-    "message": "確定取消所有賬戶對所有網站的授權嗎?"
+    "message": "取消所有賬戶授權?"
   },
   "directDepositEther": {
     "message": "直接存入CFX"
