Fix locale messages

--- a/app/_locales/am/messages.json
+++ b/app/_locales/am/messages.json
@@ -737,7 +737,7 @@
   "optionalBlockExplorerUrl": {
     "message": "ኤክስፕሎረር URL አግድ (አማራጭ)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "ምልክት (አማራጭ)"
   },
   "orderOneHere": {
