--- a/app/_locales/fil/messages.json
+++ b/app/_locales/fil/messages.json
@@ -671,7 +671,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Block Explorer URL (opsyonal)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Simbolo (opsyonal)"
   },
   "orderOneHere": {
