--- a/app/_locales/ro/messages.json
+++ b/app/_locales/ro/messages.json
@@ -727,7 +727,7 @@
   "optionalBlockExplorerUrl": {
     "message": "URL explorator bloc (opțional)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Simbol (opțional)"
   },
   "orderOneHere": {
