--- a/app/_locales/sv/messages.json
+++ b/app/_locales/sv/messages.json
@@ -724,7 +724,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Block Explorer URL (valfritt)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Symbol (frivillig)"
   },
   "orderOneHere": {
