--- a/app/_locales/sw/messages.json
+++ b/app/_locales/sw/messages.json
@@ -718,7 +718,7 @@
   "optionalBlockExplorerUrl": {
     "message": "URL ya Block Explorer URL (hiari)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Ishara (hiari)"
   },
   "orderOneHere": {
