--- a/app/_locales/bg/messages.json
+++ b/app/_locales/bg/messages.json
@@ -736,7 +736,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Блокиране на Explorer URL (по избор)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Символ (по избор)"
   },
   "orderOneHere": {
