--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -580,7 +580,7 @@
   "ofTextNofM": {
     "message": "de"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Símbolo (opcional)"
   },
   "orderOneHere": {
