--- a/app/_locales/es_419/messages.json
+++ b/app/_locales/es_419/messages.json
@@ -725,7 +725,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Bloquear la URL de Explorer (opcional)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Símbolo (opcional)"
   },
   "orderOneHere": {
