--- a/app/_locales/hi/messages.json
+++ b/app/_locales/hi/messages.json
@@ -737,7 +737,7 @@
   "optionalBlockExplorerUrl": {
     "message": "एक्सप्लोरर यूआरएल ब्लॉक (वैकल्पिक)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "सिम्बल (वैकल्पिक)"
   },
   "orderOneHere": {
