--- a/app/_locales/id/messages.json
+++ b/app/_locales/id/messages.json
@@ -721,7 +721,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Blokir URL Penjelajah (opsional)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Simbol (opsional)"
   },
   "orderOneHere": {
