--- a/app/_locales/it/messages.json
+++ b/app/_locales/it/messages.json
@@ -1056,7 +1056,7 @@
   "optionalBlockExplorerUrl": {
     "message": "URL del Block Explorer (opzionale)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Simbolo (opzionale)"
   },
   "orderOneHere": {
