--- a/app/_locales/ms/messages.json
+++ b/app/_locales/ms/messages.json
@@ -714,7 +714,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Sekat URL Explorer (pilihan)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Simbol (pilihan)"
   },
   "orderOneHere": {
