--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -769,7 +769,7 @@
   "optionalBlockExplorerUrl": {
     "message": "URL блок-эксплорера  (необязательно)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Символ  (необязательно)"
   },
   "orderOneHere": {
