--- a/app/_locales/sk/messages.json
+++ b/app/_locales/sk/messages.json
@@ -709,7 +709,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Blokovať URL Explorera (voliteľné)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Symbol (voliteľné)"
   },
   "orderOneHere": {
