--- a/app/_locales/sr/messages.json
+++ b/app/_locales/sr/messages.json
@@ -731,7 +731,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Blokirajte URL Explorer-a (opciono)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Simbol (opciono)"
   },
   "orderOneHere": {
