--- a/app/_locales/uk/messages.json
+++ b/app/_locales/uk/messages.json
@@ -740,7 +740,7 @@
   "optionalBlockExplorerUrl": {
     "message": "Блокувати Explorer URL (не обов'язково)"
   },
-  "optionalSymbol": {
+  "optionalCurrencySymbol": {
     "message": "Символ (не обов'язково)"
   },
   "orderOneHere": {
