feat: show gas in drip, error when lower than 1 drip
CU-51u63g
CU-51u645
CU-4vu27z

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -642,7 +642,7 @@
     "message": "Storage Collaterized"
   },
   "gasPrice": {
-    "message": "Gas Price (GDrip)"
+    "message": "Gas Price (Drip)"
   },
   "gasPriceExtremelyLow": {
     "message": "Gas Price Extremely Low"
