fix: sentEther i18n CU-4vukp4

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1254,7 +1254,7 @@
     "message": "Send Tokens"
   },
   "sentEther": {
-    "message": "sent CFX"
+    "message": "send CFX"
   },
   "sentTokens": {
     "message": "sent tokens"
