fix: incorrect password i18n

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -700,6 +700,9 @@
   "hexData": {
     "message": "Hex Data"
   },
+  "incorrectPassword": {
+    "message": "Incorrect Password"
+  },
   "invalidHexData": {
     "message": "Invalid Hex Data"
   },
