--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -601,6 +601,9 @@
   "hexData": {
     "message": "十六进制数据"
   },
+  "incorrectPassword": {
+    "message": "密码错误"
+  },
   "invalidHexData": {
     "message": "十六进制数据格式错误"
   },
