--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -629,6 +629,9 @@
   "ethereumPublicAddress": {
     "message": "Ethereum Public Address"
   },
+  "etherscan": {
+    "message": "Etherscan"
+  },
   "etherscanView": {
     "message": "View account on Etherscan"
   },
@@ -1848,6 +1851,9 @@
   "swapUsingBestQuote": {
     "message": "Using the best quote"
   },
+  "swapVerifyTokenExplanation": {
+    "message": "Multiple tokens can use the same name and symbol. Check Etherscan to verify this is the token you're looking for."
+  },
   "swapViewToken": {
     "message": "View $1"
   },
@@ -2078,6 +2084,9 @@
   },
   "userName": {
     "message": "Username"
+  },
+  "verifyThisTokenOn": {
+    "message": "Verify this token on $1"
   },
   "viewAccount": {
     "message": "View Account"
