Show price difference warning on swaps price quote

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1741,6 +1741,13 @@
     "message": "Your $1 will be added to your account once this transaction has processed.",
     "description": "This message communicates the token that is being transferred. It is shown on the awaiting swap screen. The $1 will be a token symbol."
   },
+  "swapPriceDifference": {
+    "message": "Price difference of ~$1%",
+    "description": "This message represents the price slippage for the swap.  $1 is a percentage with up to two decimals (ex: 2.89)."
+  },
+  "swapPriceDifferenceTooltip": {
+    "message": "Depending on liquidity, swapping can cause a token's price to change. This is the difference between the current market price and what it will be after you swap."
+  },
   "swapProcessing": {
     "message": "Processing"
   },
