--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1743,7 +1743,11 @@
   },
   "swapPriceDifference": {
     "message": "Swapping $1 $2 (~$3) for $4 $5 (~$6)",
-    "description": "This message represents the price slippage for the swap.  $1 is a percentage with up to two decimals (ex: 2.89)."
+    "description": "This message represents the price slippage for the swap.  $1 and $4 are a number (ex: 2.89), $2 and $5 are symbols (ex: ETH), and $3 and $6 are native currency amounts."
+  },
+  "swapPriceDifferenceError": {
+    "message": "Price differential error: $1",
+    "description": "$1 is the error reported by the API."
   },
   "swapPriceDifferenceTooltip": {
     "message": "The difference in market prices can be affected by fees taken by intermediaries, size of market, size of trade, or market inefficiencies."
