fix: add status for tx missing `rawTx`

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -213,6 +213,12 @@
   "browserNotSupported": {
     "message": "Your Browser is not supported..."
   },
+  "bugged": {
+    "message": "Unknown"
+  },
+  "buggedTxTooltip": {
+    "message": "Portal can't get the right status of this transaction, please check it on ConfluxScan"
+  },
   "builtInCalifornia": {
     "message": "ConfluxPortal a fork of Metamask which is designed and built in California. It's altered to use on Conflux network in Beijing."
   },
